tests/negative/expr_reify_index.lev
// LA-31 Stage 3 §3 — indexing is unsupported (E2).
class User { Array<string> tags; new User(Array<string> t) { tags = t; } }
string useIt(expr::Expr<(User)=>bool> e) { return "x"; }
console.writeln(useIt((u) => u.tags[0] == "x"));
